# x2-feed

./: .gdbinit  Cargo.toml  Makefile  README.md  build.rs  dump-eeprom.sh  dump-flash.sh  eeprom.x  memory.x
.cargo/: config
.circleci/: config.yml
.github/workflows/: verify.yml
crates/eeprom/: Cargo.toml
crates/eeprom/src/: lib.rs
crates/eeprom/src/tests/: memdump.rs  mod.rs
crates/lcd/: Cargo.toml
crates/lcd/src/: lib.rs
crates/stepgen/: Cargo.toml
crates/stepgen/src/: lib.rs
crates/stepgen/tests/: stepgen.rs
crates/stm32-hal/: Cargo.toml
crates/stm32-hal/src/: flash.rs  gpio.rs  lib.rs  stm32f1xx.rs
pcb/current/: .gitignore  Makefile  eagle.epf  x2-feed.brd  x2-feed.lbr  x2-feed.sch
pcb/v1.0/: .gitignore  README.md  eagle.epf  x2-feed.brd  x2-feed.sch
src/: clock.rs  config.rs  estop.rs  font.rs  hal.rs  led.rs  main.rs  print.rs  settings.rs  stepper.rs  threads.rs  timer.rs
src/hal/: clock.rs  controls.rs  delay.rs  driver.rs  encoder.rs  estop.rs  led.rs  mod.rs  rpm.rs  screen.rs  stepper.rs
src/hw/: clock.rs  config.rs  controls.rs  delay.rs  driver.rs  encoder.rs  gpio.rs  hall.rs  hwlcd.rs  lcd.rs  led.rs  mod.rs  screen.rs  stepper.rs
src/menu/: feed.rs  limits.rs  mod.rs  steputil.rs  thread.rs  util.rs
