[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
description = "X2 PowerFeed and Motor Control"
name = "x2-feed"
version = "0.2.1-pre"

[dependencies]
cortex-m = "0.3.1"

[dependencies.stepgen]
version = "0.1.0"
git = "https://github.com/idubrov/stepgen"
tag = "0.1.0"

[dependencies.cortex-m-rtfm]
version = "0.2.1"

[dependencies.cortex-m-rt]
version = "0.3.5"
features = ["abort-on-panic"]

[dependencies.stm32f103xx]
version = "0.7.5"
features = ["rt"]

[dependencies.hd44780]
git = "https://github.com/idubrov/hd44780"
tag = "0.1.0"

[profile]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
debug = false
lto = true
