[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
description = "X2 PowerFeed and Motor Control"
name = "x2-feed"
version = "0.2.1-pre"

[dependencies]
cortex-m = "0.3.1"

[dependencies.stepgen]
version = "0.1.3-alpha.0"
git = "https://github.com/idubrov/stepgen"

[dependencies.cortex-m-rtfm]
version = "0.2.1"

[dependencies.cortex-m-rt]
version = "0.3.5"

[dependencies.stm32f103xx]
version = "0.7.5"
features = ["rt"]

[dependencies.lcd]
version = "0.3.0"

[dependencies.stm32-hal]
version = "0.2.0"
features = ["use-stm32f103xx"]

[dependencies.bare-metal]
version = "0.1.1"

[dependencies.eeprom]
version = "0.1.0"
features = ["use-stm32f103xx"]

[profile]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
debug = false
lto = true
