[package]
description = "EEPROM emulation on top of FLASH for STM32"
name = "eeprom"
version = "0.2.0-alpha"
edition = "2021"

[dependencies]
stm32-hal = { version = "0.3.0-alpha", path = "../stm32-hal" }
stm32f1 = { version = "0.14.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
default = ["default-eeprom"]
default-eeprom = []
stm32f103 = ["stm32-hal/stm32f103", "stm32f1", "stm32f1/stm32f103"]
