[package]
description = "EEPROM emulation on top of FLASH for STM32"
name = "eeprom"
version = "0.2.0-alpha"
edition = "2021"

[dependencies]
stm32f1xx-hal = {version = "0.8.0", features = [ "stm32f103" ], optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
default = ["default-eeprom"]
default-eeprom = []
stm32f103 = ["stm32f1xx-hal", "stm32f1xx-hal/stm32f103"]
